DP-2228 - Ordered Steps - fixing mobile bug with overlapped numbers

--- a/styleguide/source/assets/scss/03-organisms/_steps-ordered.scss
+++ b/styleguide/source/assets/scss/03-organisms/_steps-ordered.scss
@@ -42,6 +42,17 @@ $steps-ordered-icon-border: 3px;
     &__content {
       padding-left: 0;
       padding-top: 0;
+
+      @media ($bp-small-max) {
+        padding-left: 60px;
+      }
+    }
+  }
+
+  .ma__action-step__header + .ma__action-step__content {
+    padding-left: 0 !important;
+    @media ($bp-small-max) {
+      padding-left: 0 !important;
     }
   }
 }
